[package]
name = "mem_pool"
version = "0.1.0"
edition = "2021"
description = "A Multi Threading friendly Memory / Object pooling library"
homepage = "https://github.com/nuno1212s/MemPool"
repository = "https://github.com/nuno1212s/MemPool"
authors = ["Nuno Neto"]
license-file = "LICENSE"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
crossbeam-channel = "0.5.7"

[dev-dependencies]
criterion = "0.4.0"
criterion-plot = "0.5.0"
rayon = "1.7.0"
oneshot = "0.1.5"
object-pool = "0.5.4"

[[bench]]
name = "mempool_bench"
harness = false